--- a/enviornment.yml
+++ b/enviornment.yml
@@ -1,10 +1,15 @@
-name: prism_viewer_myvenv
+name: prism_viewer_env
+channels:
+  - conda-forge
 dependencies:
-  - python =3.8
-  - numpy
-  - pyqt
+  - python=3.11
+  - pyqt=5.15.9
+  - numpy=1.26.4
+  - pythonocc-core=7.8.1  
+  - swig
   - sqlite
-  - pythonocc-core
-  - pip:
-      - PyQt5
-      - OCC
+  - occt=7.8.1
+  - six=1.16.0
+  - svgwrite
+  - qt=5.15.9
+  - pip
